2014-07-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/terminal.c (term_Km): New variable.
	(terminal_begin_using_terminal, terminal_end_using_terminal): Enter
	and leave mouse tracking mode.
	(add_seq_to_byte_map, initialize_byte_map): Function
	split out.
	(initialize_byte_map): Bind term_Km sequence to KEY_MOUSE.
	* info/infomap (KEY_MOUSE): New symbol.
	(KEYMAP_META_BASE, KEYMAP_SIZE): Updated.

	* info/session.c (mouse_reporting_on, mouse_reporting_off)
	(mouse_event_handler): New functions.
	(mouse_cb, mouse_cx, mouse_cy): New variables.
	(get_input_key): Set them if mouse event occurred.
	(get_input_key_internal): Initialize variable properly.
	(info_read_and_dispatch): Call mouse_event_handler if mouse event
	received.

2014-07-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (get_input_key): Try to ignore sequences in the input
	stream produced by unrecognized keys.
	(get_input_key, get_input_key_internal): Wrapper around get_input_key.

2014-07-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Read bytes from file descriptor 3 and feed into
	master side of pseudoterminal.
	* info/t/Init-intera.inc, info/t/Init-inter.inc: File renamed.  Create
	a pair of named pipes to communicate with pseudotty program. Get
	name of pseudoterminal slave device using shell builtin 'read'.
	* info/t/Cleanup.inc: Delete named pipes.
	* info/t/body-start.sh, info/t/end-of-line.sh, info/t/goto-quoted.sh,
	info/t/index-apropos.sh, info/t/index-long-nodeline.sh,
	info/t/index.sh, info/t/last-no-history.sh, info/t/menu-sequence.sh,
	info/t/next-quoted.sh, info/t/quoted-label-and-target.sh,
	info/t/quoted-label-as-target.sh, info/t/quoted-target.sh,
	info/t/search-after-tag.sh, info/t/split-file-menu.sh,
	info/t/split-index.sh, info/t/tab.sh: Specify input keystrokes by
	feeding into named pipe instead of using --dribble option.
	* info/t/README: Updated.

2014-06-29  Gavin Smith  <gavinsmith0123@gmail.com>
